1. 每个页面都能分享到微信好友或者朋友圈