@@ -87,3 +87,22 @@ page {
 .text {
     color: white;
 }
+
+/* 正在加载の遮罩 */
+.mask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.667);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mask
+.text {
+    color: white;
+    font-size: 40rpx;
+}
