@@ -1,1 +1,4 @@
-1. 每个页面都能分享到微信好友或者朋友圈
+~~1. 每个页面都能分享到微信好友或者朋友圈~~
+2. 每个页面都能返回到上一页（wx.redirectTo -> wx.navigateTo），新增就诊人后回到就诊人管理页面也会刷新
+3. 就诊人页面刚进入时会显示“正在获取”，防止因网络不佳导致显示默认用户列表
+4. 启用组件按需注入（"lazyCodeLoading": "requiredComponents"）
